--- a/adventureStyle.css
+++ b/adventureStyle.css
@@ -19,6 +19,19 @@ img{
 p{
     font-family:luminari;
 }
+.topnav{
+    background-color:DarkGrey;
+    overflow:hidden;
+}
+.topnav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
 html {
     background-color:Lavender;
 }
