--- a/adventureStyle.css
+++ b/adventureStyle.css
@@ -10,11 +10,12 @@ h2{
     text-weight: bold;
 }
 img{
+    border-radius: 10%;
     display:block;
     margin-left:auto;
     margin-right:auto;
     width:50%;
-    height:100%
+    height:100%;
 }
 p{
     font-family:luminari;
@@ -31,8 +32,21 @@ p{
   text-decoration: none;
   font-size: 17px;
 }
-
+.column{
+    float: left;
+    width:50%;
+    height: 50%
+}
+.row::after{
+    content: "";
+    clear: both;
+    display: table;
+}
 html {
     background-color:Lavender;
+}
+.Shady{
+    width:40%;
+    height:40%;
 }
   
